fixed overflow onto map

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,8 +150,8 @@ nav h1 a {
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
+  min-height: 300px;
+  padding: 10px 30px 25px;
   text-align: left;
   width: 270px;
 }
@@ -163,10 +163,10 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
-#restaurants-list li h1 {
+#restaurants-list li h2 {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 1.1rem;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -210,11 +210,14 @@ nav h1 a {
   height: 100%;
   width: 100%;
 }
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
+ 
+ .inside #footer {
+  position: fixed;
+  bottom: 0px;
+  padding: 0.4em;
+  width: 100%;
 }
+
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -244,24 +247,30 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
+
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 100px 10px 60px;
   width: 50%;
-}
-#restaurant-container, #reviews-container, a {
-  color: white;
-}
-#restaurant-container {
   display: flex;
   flex-direction: column;
   align-content: center;
 }
-#reviews-container {
-  padding: 22px 30px 60px;
+#restaurant-container, #reviews-container, a {
+  color: white;  
 }
 
+#reviews-container {
+  padding: 20px 6px 20px;
+}
+#restaurant-name {
+  color: #f58500;
+  font-size: 24pt;
+  font-weight: 300;
+  letter-spacing: -1px;
+  padding-bottom: 1pt;
+}
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -280,7 +289,7 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 12px 20px 20px;
   position: relative;
   width: 85%;
   display: flex;
@@ -294,5 +303,16 @@ nav h1 a {
   color: #666;
 }
 
-
+#footerR {
+  background-color: #444;
+  color: #aaa;
+  font-size: 8pt;
+  letter-spacing: 1px;
+  padding: 0;
+  text-align: center;
+  text-transform: uppercase;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
 
